fix: lock audio widths to 200px The default `<audio>` width is slightly larger than the Vector UI's minimum and default width, making the chatlist break slightly as it overflows off-page.
For now, a simple hard width limit will suffice.

--- a/src/styles.css
+++ b/src/styles.css
@@ -474,6 +474,10 @@ button:active {
   opacity: 0.75;
 }
 
+audio {
+  width: 200px;
+}
+
 .btn {
   cursor: pointer;
 }
